--- a/src/main/resources/templates/info_page.html
+++ b/src/main/resources/templates/info_page.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Info</title>
     <link rel="stylesheet" type="text/css" href="/css/basic_style.css">
 </head>
 <body>
-<form style="text-align: center">
+<form style="text-align: center" class="adaptform2">
     <span th:text="${info}" style="text-align: center"></span><br><br>
     <a class="oper" href="/" style="text-align: center">OK</a>
 </form>
