--- a/src/main/resources/templates/edit_password.html
+++ b/src/main/resources/templates/edit_password.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Смена пароля</title>
     <link rel="stylesheet" type="text/css" href="/css/basic_style.css">
 </head>
 <header th:class="${darkDesign} ? 'darkhead' : 'head'">
     <nav th:class="${darkDesign} ? 'darkhead' : 'head'">
-        <a href="/task-tracker/" th:class="${darkDesign} ? 'darkhead' : 'head'">На главную</a>
+        <a href="/task-tracker/" th:class="${darkDesign} ? 'darkhead' : 'head'">Главная</a>
         <a href="/profile" th:class="${darkDesign} ? 'darkhead' : 'head'">Профиль</a>
         <a href="/about" th:class="${darkDesign} ? 'darkhead' : 'head'">О сайте</a>
         <a href="/task-tracker/logout" th:class="${darkDesign} ? 'darkhead' : 'head'">Выйти</a>
     </nav>
 </header>
 <body th:class="${darkDesign} ? 'dark-mode' : ''">
-<form action="/checkPassword" method="post" th:object="${curUser}" th:class="${darkDesign} ? 'dark' : ''">
-    ПАРОЛЬ <input type="text" th:field="*{password}"/><span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="error-message"></span><br><br>
-    НОВЫЙ ПАРОЛЬ <input type="text" id="newPassword" name="newPassword"><br><br>
+<form action="/checkPassword" method="post" th:object="${curUser}" th:class="${darkDesign} ? 'dark adaptform2' : 'adaptform2'">
+    <b>ПАРОЛЬ</b> <input type="text" th:field="*{password}"/><span th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="error-message"></span><br><br>
+    <b>НОВЫЙ ПАРОЛЬ</b> <input type="text" id="newPassword" name="newPassword"><br><br>
     <span th:if="${errorPassword}" class="error-message">Ошибка: неправильный пароль или новый пароль меньше 6 символов</span><br>
-    <input type="submit" value="СОХРАНИТЬ"/>
+    <input type="submit" value="СОХРАНИТЬ" class="marginsubmit"/>
 </form>
 </body>
 </html>
