refactor and add some validation for Task-Entity

--- a/src/main/resources/templates/about_page.html
+++ b/src/main/resources/templates/about_page.html
@@ -32,9 +32,9 @@
         <img src="/images/nikita.jpg" alt="Nikita">
         <p>Создатель данного таск-трэкера любит программировать и занимается этим с 14 лет. Начал я с олимпиадного программирования.</p>
         <hr><p>К данному моменту у меня есть много достижений в этой области: ежегодно я участвую в 10-15 олимпиадах различных этапов.</p>
-        <hr><p>Я занимал призовое место на полуфинале чемпионата Северной Евразии NERC ICPC, а также был участником полуфинала мира ICPC</p>
+        <hr><p>Я занимал призовое место на 1/4 чемпионата ICPC, а также был участником полуфинала мира ICPC</p>
         <hr><p>Сейчас меня интересует Enterprise-разработка на JAVA, поэтому я решил сделать демонстрационный проект для своего будущего резюме</p>
-        <hr><p>Все мои проекты вы можете найти по адресу https://github.com/HiKvern</p>
+        <hr><p>Все мои проекты вы можете найти по адресу https://github.com/NikitaKadukov</p>
     </div>
 </div>
 </body>
